@@ -1,30 +1,9 @@
 package com.gentics.mesh.search.index.node;
 
-import static com.gentics.mesh.search.index.MappingHelper.BOOLEAN;
-import static com.gentics.mesh.search.index.MappingHelper.DATE;
-import static com.gentics.mesh.search.index.MappingHelper.DOUBLE;
-import static com.gentics.mesh.search.index.MappingHelper.LONG;
-import static com.gentics.mesh.search.index.MappingHelper.NAME_KEY;
-import static com.gentics.mesh.search.index.MappingHelper.NESTED;
-import static com.gentics.mesh.search.index.MappingHelper.NOT_ANALYZED;
-import static com.gentics.mesh.search.index.MappingHelper.OBJECT;
-import static com.gentics.mesh.search.index.MappingHelper.STRING;
-import static com.gentics.mesh.search.index.MappingHelper.UUID_KEY;
-import static com.gentics.mesh.search.index.MappingHelper.fieldType;
-import static com.gentics.mesh.util.DateUtils.toISO8601;
-
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-
-import javax.inject.Inject;
-import javax.inject.Singleton;
-
-import org.apache.commons.lang3.NotImplementedException;
-
 import com.gentics.mesh.core.data.GraphFieldContainer;
 import com.gentics.mesh.core.data.NodeGraphFieldContainer;
+import com.gentics.mesh.core.data.Tag;
+import com.gentics.mesh.core.data.TagFamily;
 import com.gentics.mesh.core.data.node.Micronode;
 import com.gentics.mesh.core.data.node.Node;
 import com.gentics.mesh.core.data.node.field.BinaryGraphField;
@@ -49,11 +28,32 @@ import com.gentics.mesh.core.rest.schema.FieldSchema;
 import com.gentics.mesh.core.rest.schema.Schema;
 import com.gentics.mesh.core.rest.schema.impl.ListFieldSchemaImpl;
 import com.gentics.mesh.search.index.AbstractTransformator;
-
+import io.vertx.core.json.JsonArray;
 import io.vertx.core.json.JsonObject;
 import io.vertx.core.logging.Logger;
 import io.vertx.core.logging.LoggerFactory;
+import org.apache.commons.lang3.NotImplementedException;
 import rx.Observable;
+
+import javax.inject.Inject;
+import javax.inject.Singleton;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+
+import static com.gentics.mesh.search.index.MappingHelper.BOOLEAN;
+import static com.gentics.mesh.search.index.MappingHelper.DATE;
+import static com.gentics.mesh.search.index.MappingHelper.DOUBLE;
+import static com.gentics.mesh.search.index.MappingHelper.LONG;
+import static com.gentics.mesh.search.index.MappingHelper.NAME_KEY;
+import static com.gentics.mesh.search.index.MappingHelper.NESTED;
+import static com.gentics.mesh.search.index.MappingHelper.NOT_ANALYZED;
+import static com.gentics.mesh.search.index.MappingHelper.OBJECT;
+import static com.gentics.mesh.search.index.MappingHelper.STRING;
+import static com.gentics.mesh.search.index.MappingHelper.UUID_KEY;
+import static com.gentics.mesh.search.index.MappingHelper.fieldType;
+import static com.gentics.mesh.util.DateUtils.toISO8601;
 
 /**
  * Transformator which can be used to transform a {@link NodeGraphFieldContainer} into a elasticsearch document. Additionally the matching mapping can also be
@@ -456,8 +456,35 @@ public class NodeContainerTransformator extends AbstractTransformator<NodeGraphF
 	}
 
 	/**
+	 * Transforms tags grouped by tag families
+	 * @param document
+	 * @param tags
+	 */
+	private void addTagFamilies(JsonObject document, List<? extends Tag> tags) {
+		JsonObject familiesObject = new JsonObject();
+
+		for (Tag tag: tags) {
+			TagFamily family = tag.getTagFamily();
+			JsonObject familyObject = familiesObject.getJsonObject(family.getName());
+			if (familyObject == null) {
+				familyObject = new JsonObject();
+				familyObject.put("uuid", family.getUuid());
+				familyObject.put("tags", new JsonArray());
+				familiesObject.put(family.getName(), familyObject);
+			}
+			familyObject.getJsonArray("tags").add(
+				new JsonObject()
+					.put("name", tag.getName())
+					.put("uuid", tag.getUuid())
+			);
+		}
+
+		document.put("tagFamilies", familiesObject);
+	}
+
+	/**
 	 * It is required to specify the releaseUuid in order to transform containers.
-	 * 
+	 *
 	 * @deprecated
 	 */
 	@Override
@@ -477,6 +504,7 @@ public class NodeContainerTransformator extends AbstractTransformator<NodeGraphF
 
 		addProject(document, node.getProject());
 		addTags(document, node.getTags(node.getProject().getLatestRelease()));
+		addTagFamilies(document, node.getTags(node.getProject().getLatestRelease()));
 
 		// The basenode has no parent.
 		if (node.getParentNode(releaseUuid) != null) {
@@ -537,6 +565,12 @@ public class NodeContainerTransformator extends AbstractTransformator<NodeGraphF
 		tagsMapping.put("type", "nested");
 		tagsMapping.put("dynamic", true);
 		typeProperties.put("tags", tagsMapping);
+
+		// tagFamilies
+		JsonObject tagFamiliesMapping = new JsonObject();
+		tagFamiliesMapping.put("type", "nested");
+		tagFamiliesMapping.put("dynamic", true);
+		typeProperties.put("tagFamilies", tagFamiliesMapping);
 
 		// language
 		JsonObject languageMapping = fieldType(STRING, NOT_ANALYZED);
