@@ -2,6 +2,8 @@
 
 == 0.8.0 (Pending)
 
+* __[Enhancement]__ Tags are now also indexed in the node document in the field `tagFamilies`, grouped by tag families.
+
 * __[Enhancement]__ The no longer needed schemaReference property was removed from node update requests.
 
 * __[Enhancement]__ The rootNodeUuid property within node project response was changed. 
